# SEGA

./: README.md  pyproject.toml  requirements.txt
data/synthetic/: pairs.jsonl
genpref_sega/data/: jsonl.py
genpref_sega/models/: hf.py
genpref_sega/sampling/: generate.py
genpref_sega/scoring/: entropy.py
genpref_sega/sega/: trainer.py
genpref_sega/utils/: common.py
scripts/: eval_pref_accuracy.py  train_sega.py  train_sft.py
