[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genpref-sega"
version = "0.1.0"
description = "Reproduction of Generative Preference Modeling via CoT Refinement (GenPref-SEGA)"
authors = [{name="Anonymous", email="anon@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.41",
  "accelerate>=0.30.0",
  "datasets>=2.19.0",
  "tqdm>=4.66.0",
  "peft>=0.11.0",
  "sentencepiece",
  "protobuf<5",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "rich>=13.7.0",
  "typing-extensions>=4.8.0"
]

[tool.setuptools.packages.find]
include = ["genpref_sega*"]
